--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ leptos_meta = { version = "0.6", features = ["nightly"] }
 leptos_actix = { version = "0.6", optional = true }
 leptos_router = { version = "0.6", features = ["nightly"] }
 wasm-bindgen = "0.2.91"
+serde = { version = "1.0.197", features = ["derive"] }
 
 
 [features]
